# imapfetch

./: .gitmodules  Cargo.toml  README.md
examples/: mbox-info.rs
src/: file.rs  lib.rs  main.rs  parser.rs
test/: example1.mbox
