[package]
authors = ["Niklas Claesson <nicke.claesson@gmail.com>"]
edition = "2018"
name = "imapfetch"
version = "0.1.0"

[[bin]]
name = "imapfetch"

[dependencies]
env_logger = "0.6.1"
memmap = "0.7.0"
native-tls = "0.2.3"
rpassword = "3.0.2"
structopt = "0.2.15"

[dependencies.imap]
path = "rust-imap"
version = "1.0.0"

[lib]
name = "imapfetch"
